<resources>
    <string name="app_name">Countdown App</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="days_left">Days Left</string>
    <string name="countdowns">Countdowns</string>
    <string name="create_new_countdown">Create new countdown</string>
    <string name="edit">Edit</string>
    <string name="add_title">Add title</string>
    <string name="pick_date">Pick Date</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string-array name="months_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="days_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="years_array">
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
        <item>2050</item>
        <item>2051</item>
        <item>2052</item>
        <item>2053</item>
        <item>2054</item>
        <item>2055</item>
        <item>2066</item>
        <item>2067</item>
        <item>2068</item>
        <item>2069</item>
        <item>2070</item>
        <item>2071</item>
        <item>2072</item>
        <item>2073</item>
        <item>2074</item>
        <item>2075</item>
        <item>2076</item>
        <item>2077</item>
        <item>2078</item>
        <item>2079</item>
        <item>2080</item>
        <item>2081</item>
        <item>2082</item>
        <item>2083</item>
        <item>2084</item>
        <item>2085</item>
        <item>2086</item>
        <item>2087</item>
        <item>2088</item>
        <item>2089</item>
        <item>2090</item>
        <item>2091</item>
        <item>2092</item>
        <item>2093</item>
        <item>2094</item>
        <item>2095</item>
        <item>2096</item>
        <item>2097</item>
        <item>2098</item>
        <item>2099</item>
    </string-array>
</resources>