<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/add_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/month" />

        <Spinner
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/day" />

        <Spinner
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/year" />

    </LinearLayout>

</LinearLayout>