<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="105dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/countdownName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/countdownDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countdownName"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/daysLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countdownDate"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/days_left"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/border2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentBottom="true"
        android:background="#808080"/>

    <Button
        android:id="@+id/editButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="false"
        android:layout_marginEnd="12dp"
        android:text="@string/edit"
        app:iconPadding="8dp" />
</RelativeLayout>